--- a/ScenarioSprintProject/Packages/manifest.json
+++ b/ScenarioSprintProject/Packages/manifest.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.3",
+    "com.unity.collab-proxy": "2.0.4",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.20",
+    "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.high-definition": "12.1.11",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.simulation.foundation": "file:com.unity.simulation.foundation.tgz",
+    "com.unity.simulation.sensors": "file:com.unity.simulation.sensors.tgz",
+    "com.unity.simulation.urdf-importer": "file:com.unity.simulation.urdf-importer.tgz",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.6.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
@@ -41,10 +44,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.simulation.foundation": "file:com.unity.simulation.foundation.tgz",
-    "com.unity.simulation.urdf-importer": "file:com.unity.simulation.urdf-importer.tgz",
-    "com.unity.simulation.sensors": "file:com.unity.simulation.sensors.tgz"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
