working output export

--- a/ScenarioSprintProject/.gitignore
+++ b/ScenarioSprintProject/.gitignore
@@ -77,3 +77,4 @@ crashlytics-build.properties
 [Aa]ssets/CVCaptures/Contours* 
 [Aa]ssets/CVCaptures/flawed* 
 [Aa]ssets/Scripts/.idea
+[Aa]ssets/SimulationData*
